--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
 									class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
 							</li>
 							<li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-								<a href="#"
-									class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+								<a href="assets/cv/lee-sheppard-cv.pdf"
+									class="hvr-sweep-to-bottom" target="_blank"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
 							</li>
 						</ul>
 					</div>
@@ -49,8 +49,26 @@
 			</div>
 		</div>
 	</header>
-	<section>
+	<section class="container-fluid">
+        <div class="row bg-color-contact">
+            <div class="col">
+                <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
+                <h5 class="uppercase text-center">Lets work together!</h5>
 
+                <div class="center-form">
+                    <form>
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
+                        <input type="email" name="email" id="emiladdress" class="form-control" placeholder="Email" required>
+                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
 	</section>
 	<footer class="container-fluid">
 		<div id="footer-details" class="row">
@@ -65,7 +83,7 @@
 				<h5 class="uppercase general-sub">Download</h5>
 				<p class="inline-block">
 					Need a printable version of my CV? Download it here
-					<a href="#" target="_blank" class="cv-pdf">
+					<a href="assets/cv/lee-sheppard-cv.pdf" target="_blank" class="cv-pdf">
 						<i class="fa fa-download" aria-hidden="true"></i>
 						<span class="sr-only">Download link</span>
 					</a>
