--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 									class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
 							</li>
 							<li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-								<a href="#"
-									class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+								<a href="assets/cv/lee-sheppard-cv.pdf"
+									class="hvr-sweep-to-bottom" target="_blank"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
 							</li>
 						</ul>
 					</div>
@@ -178,7 +178,7 @@
 				<h5 class="uppercase general-sub">Download</h5>
 				<p class="inline-block">
 					Need a printable version of my CV? Download it here
-					<a href="#" target="_blank" class="cv-pdf">
+					<a href="assets/cv/lee-sheppard-cv.pdf" target="_blank" class="cv-pdf">
 						<i class="fa fa-download" aria-hidden="true"></i>
 						<span class="sr-only">Download link</span>
 					</a>
